# drasi-server

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.server-only.yml  docker-compose.yml
.github/workflows/: ci.yml  integration-test-getting-started.yml  integration-test.yml  lint.yml  publish-image.yml  test.yml
config/: example.yaml  server-docker.yaml  server-minimal.yaml  server-with-env-vars.yaml
examples/: README.md  basic_setup.rs
examples/configs/basic-mock-source/: config.yaml
examples/debug-platform-building-comfort/: server-config.yaml
examples/drasi-platform/: README.md  requests.http  server-config.yaml
examples/drasi-platform-read/: requests.http  server-config.yaml
examples/drasi-platform-read/scripts/: consume-results.sh  start-server.sh
examples/drasi-platform/scripts/: cleanup.sh  publish-event.sh  setup-redis.sh  start-server.sh  view-results.sh
examples/getting-started/: .env  .env.example  README.md  requests.http  server-config.yaml
examples/getting-started/data/: products.jsonl
examples/getting-started/database/: docker-compose.yml  init.sql
examples/getting-started/scripts/: add-message.sh  add-product.sh  cleanup.sh  delete-message.sh  delete-product.sh  open-viewer.sh  setup-database.sh  start-server.sh  stream-events.sh  update-product.sh  view-results.sh
examples/getting-started/viewer/: index.html
examples/playground/: .gitignore  README.md  start-demo.sh  stop-demo.sh  web_api_query.http
examples/playground/app/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
examples/playground/app/src/: App.css  App.tsx  index.css  main.tsx
examples/playground/design/: drasi-ide-style-design.jsx  drasi-sandbox-design.jsx  drasi-ui-design-guide.md
examples/playground/scripts/: example-queries.json
examples/playground/server/: playground.yaml
examples/trading/: start-demo.sh
examples/trading/app/: package-lock.json
examples/trading/database/: docker-compose.yml
examples/trading/server/: trading-sources-only.yaml
src/: builder.rs  builder_result.rs  config.rs  factories.rs  lib.rs  main.rs  persistence.rs  server.rs
src/api/: error.rs  handlers.rs  joins_tests.rs  mod.rs  openapi.rs  tests.rs
src/api/mappings/: mod.rs  server_settings.rs
src/api/mappings/core/: mapper.rs  resolver.rs
src/api/mappings/reactions/: grpc_adaptive_mapper.rs  grpc_mapper.rs  http_adaptive_mapper.rs  http_mapper.rs  log_mapper.rs  mod.rs  platform_mapper.rs  profiler_mapper.rs  sse_mapper.rs
src/api/mappings/sources/: grpc_mapper.rs  http_mapper.rs  mock_mapper.rs  mod.rs  platform_mapper.rs  postgres_mapper.rs
src/api/models/: config_value.rs  grpc_reaction.rs  grpc_source.rs  http_reaction.rs  http_source.rs  log.rs  mock.rs  mod.rs  platform_reaction.rs  platform_source.rs  postgres.rs  profiler.rs  sse.rs
src/config/: loader.rs  mod.rs  types.rs
src/init/: builder.rs  mod.rs  prompts.rs
tests/: README.md  api.rs  api_create_query_joins.rs  config_value_integration_test.rs  library_integration.rs  persist_index_test.rs  run_all_cargo_tests.sh  server_integration_test.rs  server_start_stop_test.rs  test_enum_serialization.rs
tests/api/: README.md  contract_test.rs  integration_test.rs  persistence_test.rs  state_consistency_test.rs  test_utils.rs
tests/grpc/: grpc_adaptive_example.yaml  grpc_example.yaml
tests/http/: http_adaptive_example.yaml  http_example.yaml
tests/integration/: README.md  config.yaml  run-integration-test.sh  setup-postgres.sh
tests/integration/getting-started/: README.md  config.yaml  run-integration-test.sh  setup-postgres.sh
tests/test_support/: config_helpers.rs
(+12 files in other folders)
